--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
 
 		<div class="section-xs border-top">
 			<div class="container text-center">
-				<p>&copy; <?php echo date('Y') ?> METLITE, All Rights Reserved.</p>
+				<p>&copy; 2020 METLITE, All Rights Reserved.</p>
 			</div>
 		</div>
 
